--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "curso-node",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.ts",
+    "build": "npx tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.38",
+    "nodemon": "^2.0.16",
+    "ts-node": "^10.8.0"
   },
   "dependencies": {
     "express": "^4.18.1",
